[gd_scene load_steps=2 format=3 uid="uid://bso7ms1alr6kl"]

[ext_resource type="Script" uid="uid://but8q170dr0qe" path="res://ui/save_load/SaveSlotEntry.gd" id="1_edejq"]

[node name="SaveSlotEntry" type="Button"]
custom_minimum_size = Vector2(225, 50)
offset_right = 225.0
offset_bottom = 50.0
script = ExtResource("1_edejq")

[node name="Container" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CharacterNameLabel" type="Label" parent="Container"]
layout_mode = 2
text = "Character Name"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LevelNameLabel" type="Label" parent="Container"]
layout_mode = 2
text = "Level Name"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SaveTimeLabel" type="Label" parent="Container"]
layout_mode = 2
text = "Save Time"
horizontal_alignment = 1
vertical_alignment = 1
